# finite-field-calculator

./: CMakeLists.txt  README.md
include/: finiteFieldElement.hpp
src/: main.cpp
